<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Expense Viewer</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Please add your daily expense after picking the dates</string>
    <string name="currency">KM</string>
    <string name="amount">Cost</string>
    <string name="date_text">Please pick a date</string>
    <string name="submit_expense_text">Add Expense</string>
    <string name="description_hint">Short description of expense</string>
    <string name="selected_date">DD/MM/YYYY</string>
    <string-array name="currency_array">
        <item>KM</item>
        <item>EUR</item>
        <item>TL</item>
    </string-array>

</resources>
