<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dailyexpenseviewer.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_text" />
    <Button 
        android:id="@+id/dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_text"
        android:layout_alignParentRight="true"
        android:text="@string/date_text"
        android:onClick="showDatePickerDialog"
        />
    <EditText 
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dates"
        android:layout_toLeftOf="@id/currency"
        android:hint="@string/amount"
        />
    <EditText 
        android:id="@+id/currency"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dates"
        android:layout_alignParentRight="true"
        android:hint="@string/currency"
        />
	<Button 
	    android:id="@+id/submit_expense"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/currency"
	    android:layout_alignParentRight="true"
	    android:text="@string/submit_expense_text"
	    />

</RelativeLayout>
